Fri Mar 18 21:45:0000 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* daemon/slave.c, daemon/verify-crypt.c,
	  daemon/verify-shadow.c, gui/gdmcomm.c,
	  gui/gdmphotosetup.c, gui/gdmsetup.c,
	  vicious-extensions/glade-helper.c:
	  Fixed messages - fixes bug 170531.
	* gui/gdmlogin.c: Now use ve_locale_from_utf in
	  the gdm_login_enter function since it's used
	  everywhere else and in the same logic in the
	  greeter.
	* gui/greeter/greeter.c, gui/greeter_item_pam.[hc],
	  gui/greeter_greeter_parser.c, 
	  gui/greeter/themes/circles/circles.xml,
	  gui/greeter/themes/happygnome/happygnome.xml,
	  gui/greeter/themes/happygnome-list/happygnome.xml,
	  docs/C/gdm.xml:  Added OK button to greeter so GDM
	  now properly follows the Sun HCI recommendations.
	  Fixes bug 98470.

Thu Mar 17 2:30:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* config/extract-shell.sh: Made comment nicer.
	* gui/gdmlanguages.c:   Fix for bug 132629, now only 
	  display each language once.  Adding Hong Kong to
	  table.  Also added Hong Kong to table.
	* gui/modules/keymouselistener.c:  Fix message as per
	  bug 167649.
	* README.intall: Added more security information and
	  information about installing on Solaris.

Thu Mar 17 2:06:00 2005  Brian Cameron <Brian.Cameron@Sun.Com>

	* configure.in, gui/greeter/gdmthemetester.in (added),
	  gui/greeter/gdmthemetester (removed):  Fixed so
	  it recognizes gdmgreeter is installed to LIBEXEC and
	  now uses gdmwhich instead of which (same logic that the
	  Init, PreSession, etc. scripts) so it works better on
	  Solaris.
	* daemon/gdm.h, daemon/slave.c, gui/gdmlogin.c, 
	  gui/greeter/greeter.c, gui/greeter/greeter_item_ulist.c,
	  docs/C/gdm.xml, gui/greeter/greeter_parser.c,
	  gui/greeter/themes/circles/circles.xml,
	  gui/greeter/themes/happygnome/happygnome.xml,
	  gui/greeter/themes/happygnome-list/happygnome.xml:  Made
	  face browser much less braindead.  The facebrowser is
	  no longer insensitive when entering the password so