@@ -1,3 +1,14 @@
+2005-03-19  Adam Weinberger  <adamw@gnome.org>
+
+	* daemon/display.c, daemon/gdm.c, daemon/server.c,
+	  daemon/slave.c, daemon/verify-crypt.c,
+	  daemon/verify-pam.c, daemon/verify-shadow.c,
+	  gui/gdmchooser.c, gui/gdmcomm.c, gui/gdmsetup.c,
+	  gui/greeter/greeter.c,
+	  vicious-extensions/glade-helper.c,
+	  vicious-extensions/ve-nongnome.c: Fix a number of
+	  run-on sentences. Fixes bug 170532.
+
 Fri Mar 18 21:45:0000 2005  Brian Cameron <Brian.Cameron@Sun.Com>
 
 	* daemon/slave.c, daemon/verify-crypt.c,
